--- a/database-design-optimization.html
+++ b/database-design-optimization.html
@@ -127,66 +127,67 @@
                     <p>Good database design ensures that your data is structured in an efficient, scalable, and
                         accessible way. Here's what I offer for designing your database:</p>
                     <ul>
-                        <li><strong>Entity Relationship Diagram (ERD) Design:</strong> I create clear and effective ERDs
-                            that model the relationships between different data entities in your system.</li>
-                        <li><strong>Normalization:</strong> I ensure that the database is normalized to avoid redundancy
-                            and ensure that data is stored logically and efficiently.</li>
-                        <li><strong>Data Integrity Constraints:</strong> I implement constraints such as primary keys,
+                        <p><strong>Entity Relationship Diagram (ERD) Design:</strong> I create clear and effective ERDs
+                            that model the relationships between different data entities in your system.</p>
+                        <p><strong>Normalization:</strong> I ensure that the database is normalized to avoid redundancy
+                            and ensure that data is stored logically and efficiently.</p>
+                        <p><strong>Data Integrity Constraints:</strong> I implement constraints such as primary keys,
                             foreign keys, and unique constraints to ensure the accuracy and consistency of your data.
-                        </li>
-                        <li><strong>Optimized Table Structures:</strong> Designing tables that efficiently store data,
-                            with proper indexing and optimized field types for quick queries.</li>
+                        </p>
+                        <p><strong>Optimized Table Structures:</strong> Designing tables that efficiently store data,
+                            with proper indexing and optimized field types for quick queries.</p>
                     </ul>
 
                     <h3>Database Optimization</h3>
                     <p>Once the database is designed, I focus on optimizing it for speed and performance. Key areas
                         include:</p>
                     <ul>
-                        <li><strong>Indexing:</strong> I create and manage indexes to speed up data retrieval, ensuring
-                            that queries run efficiently, even with large datasets.</li>
-                        <li><strong>Query Optimization:</strong> I analyze and optimize SQL queries to ensure they
-                            execute in the shortest time possible, minimizing server load.</li>
-                        <li><strong>Database Caching:</strong> Implementing caching strategies to reduce the need for
-                            repetitive database queries, improving response times.</li>
-                        <li><strong>Optimizing Storage:</strong> I ensure efficient storage management by eliminating
+                        <p><strong>Indexing:</strong> I create and manage indexes to speed up data retrieval, ensuring
+                            that queries run efficiently, even with large datasets.</p>
+                        <p><strong>Query Optimization:</strong> I analyze and optimize SQL queries to ensure they
+                            execute in the shortest time possible, minimizing server load.</p>
+                        <p><strong>Database Caching:</strong> Implementing caching strategies to reduce the need for
+                            repetitive database queries, improving response times.</p>
+                        <p><strong>Optimizing Storage:</strong> I ensure efficient storage management by eliminating
                             unnecessary data and optimizing data storage strategies (e.g., archiving or partitioning).
-                        </li>
-                        <li><strong>Database Sharding:</strong> For large-scale applications, I implement sharding to
+                        </p>
+                        <p><strong>Database Sharding:</strong> For large-scale applications, I implement sharding to
                             break the database into smaller, more manageable pieces, improving performance and
-                            scalability.</li>
+                            scalability.</p>
                     </ul>
 
                     <h2>Benefits of Database Design & Optimization</h2>
                     <ul>
-                        <li><strong>Improved Application Performance:</strong> Proper design and optimization ensure
-                            your application can handle a larger volume of users and data, with faster load times.</li>
-                        <li><strong>Scalability:</strong> With a well-designed and optimized database, your application
-                            can scale to accommodate future growth without slowing down.</li>
-                        <li><strong>Reduced Downtime:</strong> Optimizing your database minimizes performance
-                            bottlenecks, reducing the chances of downtime and ensuring a smoother user experience.</li>
-                        <li><strong>Cost Efficiency:</strong> Optimized databases reduce resource consumption, lowering
-                            server costs and increasing operational efficiency.</li>
+                        <p><strong>Improved Application Performance:</strong> Proper design and optimization ensure
+                            your application can handle a larger volume of users and data, with faster load times.</p>
+                        <p><strong>Scalability:</strong> With a well-designed and optimized database, your application
+                            can scale to accommodate future growth without slowing down.</p>
+                        <p><strong>Reduced Downtime:</strong> Optimizing your database minimizes performance
+                            bottlenecks, reducing the chances of downtime and ensuring a smoother user experience.</p>
+                        <p><strong>Cost Efficiency:</strong> Optimized databases reduce resource consumption, lowering
+                            server costs and increasing operational efficiency.</p>
                     </ul>
 
                     <h2>Why Choose My Database Design & Optimization Services?</h2>
                     <ul>
-                        <li><strong>Expert Design:</strong> I bring years of experience in designing well-structured,
-                            scalable databases that align with your business needs and data requirements.</li>
-                        <li><strong>Advanced Optimization Techniques:</strong> I apply the latest optimization
-                            techniques to ensure that your database performs efficiently even with large datasets.</li>
-                        <li><strong>Performance Monitoring:</strong> After optimizing your database, I monitor its
-                            performance regularly to ensure it continues to run at peak efficiency.</li>
-                        <li><strong>Security & Data Integrity:</strong> I prioritize security, ensuring that your data
+                        <p><strong>Expert Design:</strong> I bring years of experience in designing well-structured,
+                            scalable databases that align with your business needs and data requirements.</p>
+                        <p><strong>Advanced Optimization Techniques:</strong> I apply the latest optimization
+                            techniques to ensure that your database performs efficiently even with large datasets.</p>
+                        <p><strong>Performance Monitoring:</strong> After optimizing your database, I monitor its
+                            performance regularly to ensure it continues to run at peak efficiency.</p>
+                        <p><strong>Security & Data Integrity:</strong> I prioritize security, ensuring that your data
                             is safe and protected while maintaining data integrity through effective constraint
-                            management.</li>
-                        <li><strong>Long-Term Scalability:</strong> My designs and optimizations are built to handle
-                            growth, so your system can scale seamlessly as your business expands.</li>
+                            management.</p>
+                        <p><strong>Long-Term Scalability:</strong> My designs and optimizations are built to handle
+                            growth, so your system can scale seamlessly as your business expands.</p>
                     </ul>
 
                 </section>
             </div>
         </section>
         <!-- Categories Area End -->
+        <!-- Want To Work Start -->
         <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
@@ -197,35 +198,42 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-3">
-                        <a href="#" class="btn btn-black f-right">Contact Me Now</a>
+                        <a href="contact.html" class="btn btn-black f-right">Contact Me Now</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Want To Work End -->
+        <!-- Want To Work End -->
         <!-- Contact Info Start -->
-        <div class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
+        <!-- Contact Info Start -->
+        <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-5 col-lg-7">
                         <div class="contact-caption mb-50">
-                            <h3>If Not Now, When? Let’s Work Together!</h3>
-                            <p>Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna
-                                aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra.</p>
-                            <img src="assets/img/gallery/sin.png" alt="">
+                            <h3>The Best Time is Now. Let's Create Something Incredible Together!
+                            </h3>
+                            <p>Let’s move forward together – your vision and our expertise can create something
+                                extraordinary. Whether it’s a new project, a fresh idea, or a unique challenge, we’re
+                                here to support you every step of the way. Don’t wait for the perfect moment, the time
+                                is now. Let's make it happen!</p>
+
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </div>
+
+        </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
