--- a/real-time-application.html
+++ b/real-time-application.html
@@ -121,11 +121,11 @@
                         providing users with live updates without needing to refresh the page. This is ideal for
                         applications such as:</p>
                     <ul>
-                        <li>Live chat systems</li>
-                        <li>Real-time notifications</li>
-                        <li>Live data dashboards</li>
-                        <li>Collaborative tools (e.g., document editing, task management)</li>
-                        <li>Live updates for stock prices, sports scores, or news</li>
+                        <p>Live chat systems</p>
+                        <p>Real-time notifications</p>
+                        <p>Live data dashboards</p>
+                        <p>Collaborative tools (e.g., document editing, task management)</p>
+                        <p>Live updates for stock prices, sports scores, or news</p>
                     </ul>
 
                     <h2>Why Choose Livewire for Real-Time Features?</h2>
@@ -133,15 +133,15 @@
                         functionality with ease. Unlike traditional JavaScript frameworks, Livewire allows you to build
                         dynamic interfaces without leaving the Laravel environment. This makes it ideal for:</p>
                     <ul>
-                        <li><strong>Interactive User Interfaces:</strong> Easily build dynamic components that update in
-                            real time.</li>
-                        <li><strong>Simplified Development:</strong> Unlike other JavaScript-based solutions, Livewire
+                        <p><strong>Interactive User Interfaces:</strong> Easily build dynamic components that update in
+                            real time.</p>
+                        <p><strong>Simplified Development:</strong> Unlike other JavaScript-based solutions, Livewire
                             allows you to use PHP for front-end interactions, keeping the development process
-                            straightforward.</li>
-                        <li><strong>Instant Data Updates:</strong> Livewire ensures that any changes in the backend are
-                            reflected in real-time without needing a page refresh, ensuring a smooth experience.</li>
-                        <li><strong>Efficient Performance:</strong> It minimizes the need for complex front-end
-                            JavaScript, allowing your web application to remain fast and lightweight.</li>
+                            straightforward.</p>
+                        <p><strong>Instant Data Updates:</strong> Livewire ensures that any changes in the backend are
+                            reflected in real-time without needing a page refresh, ensuring a smooth experience.</p>
+                        <p><strong>Efficient Performance:</strong> It minimizes the need for complex front-end
+                            JavaScript, allowing your web application to remain fast and lightweight.</p>
                     </ul>
 
                     <h2>How Does Real-Time Integration Work?</h2>
@@ -149,41 +149,42 @@
                         For example, imagine an online dashboard that displays real-time analytics data. With Livewire:
                     </p>
                     <ul>
-                        <li>The data is fetched from the backend in real time.</li>
-                        <li>Live updates are pushed to the front end without the need for a page reload.</li>
-                        <li>The user interface instantly reflects changes, providing a seamless user experience.</li>
+                        <p>The data is fetched from the backend in real time.</p>
+                        <p>Live updates are pushed to the front end without the need for a page reload.</p>
+                        <p>The user interface instantly reflects changes, providing a seamless user experience.</p>
                     </ul>
                     <p>This kind of real-time interaction allows users to see changes as they happen, improving
                         engagement and interaction with your platform.</p>
 
                     <h2>Key Benefits of Real-Time Applications</h2>
                     <ul>
-                        <li><strong>Enhanced User Experience:</strong> Users appreciate the interactivity and
-                            responsiveness of real-time applications.</li>
-                        <li><strong>Increased Engagement:</strong> Real-time updates keep users engaged and returning
-                            for more.</li>
-                        <li><strong>Better Decision-Making:</strong> Instant updates allow users to make faster
-                            decisions, especially in business and data-driven environments.</li>
-                        <li><strong>Competitive Edge:</strong> Offering real-time features gives your business a
-                            competitive advantage by offering modern, cutting-edge solutions.</li>
+                        <p><strong>Enhanced User Experience:</strong> Users appreciate the interactivity and
+                            responsiveness of real-time applications.</p>
+                        <p><strong>Increased Engagement:</strong> Real-time updates keep users engaged and returning
+                            for more.</p>
+                        <p><strong>Better Decision-Making:</strong> Instant updates allow users to make faster
+                            decisions, especially in business and data-driven environments.</p>
+                        <p><strong>Competitive Edge:</strong> Offering real-time features gives your business a
+                            competitive advantage by offering modern, cutting-edge solutions.</p>
                     </ul>
 
                     <h2>Why Choose My Real-Time Application Services?</h2>
                     <ul>
-                        <li><strong>Expert Integration:</strong> I bring deep expertise in integrating real-time
-                            features into Laravel applications using Livewire.</li>
-                        <li><strong>Seamless Experience:</strong> I ensure smooth, real-time interaction that’s easy for
-                            users to navigate and enjoy.</li>
-                        <li><strong>End-to-End Solutions:</strong> From back-end to front-end, I manage every aspect of
-                            your real-time web application development.</li>
-                        <li><strong>Scalability and Performance:</strong> My real-time applications are built to scale,
-                            ensuring performance remains strong even as user traffic grows.</li>
+                        <p><strong>Expert Integration:</strong> I bring deep expertise in integrating real-time
+                            features into Laravel applications using Livewire.</p>
+                        <p><strong>Seamless Experience:</strong> I ensure smooth, real-time interaction that’s easy for
+                            users to navigate and enjoy.</p>
+                        <p><strong>End-to-End Solutions:</strong> From back-end to front-end, I manage every aspect of
+                            your real-time web application development.</p>
+                        <p><strong>Scalability and Performance:</strong> My real-time applications are built to scale,
+                            ensuring performance remains strong even as user traffic grows.</p>
                     </ul>
 
                 </section>
             </div>
         </section>
         <!-- Categories Area End -->
+        <!-- Want To Work Start -->
         <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
@@ -194,35 +195,42 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-3">
-                        <a href="#" class="btn btn-black f-right">Contact Me Now</a>
+                        <a href="contact.html" class="btn btn-black f-right">Contact Me Now</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Want To Work End -->
+        <!-- Want To Work End -->
         <!-- Contact Info Start -->
-        <div class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
+        <!-- Contact Info Start -->
+        <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-5 col-lg-7">
                         <div class="contact-caption mb-50">
-                            <h3>If Not Now, When? Let’s Work Together!</h3>
-                            <p>Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna
-                                aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra.</p>
-                            <img src="assets/img/gallery/sin.png" alt="">
+                            <h3>The Best Time is Now. Let's Create Something Incredible Together!
+                            </h3>
+                            <p>Let’s move forward together – your vision and our expertise can create something
+                                extraordinary. Whether it’s a new project, a fresh idea, or a unique challenge, we’re
+                                here to support you every step of the way. Don’t wait for the perfect moment, the time
+                                is now. Let's make it happen!</p>
+
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </div>
+
+        </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
