--- a/responsive-front-enddevelopment.html
+++ b/responsive-front-enddevelopment.html
@@ -152,40 +152,41 @@
 
                     <h2>Benefits of Responsive Front-End Development</h2>
                     <ul>
-                        <li><strong>Improved User Experience:</strong> A responsive website provides users with a
+                        <p><strong>Improved User Experience:</strong> A responsive website provides users with a
                             smooth, seamless experience on any device, making navigation easier and improving
-                            satisfaction.</li>
-                        <li><strong>Better SEO:</strong> Google ranks responsive websites higher in search results,
-                            improving your site's visibility and reach.</li>
-                        <li><strong>Faster Load Times:</strong> Optimizing content and images for different screen sizes
-                            reduces page load time, resulting in a faster experience for users.</li>
-                        <li><strong>Cost Efficiency:</strong> Instead of building separate sites for desktop and mobile
+                            satisfaction.</p>
+                        <p><strong>Better SEO:</strong> Google ranks responsive websites higher in search results,
+                            improving your site's visibility and reach.</p>
+                        <p><strong>Faster Load Times:</strong> Optimizing content and images for different screen sizes
+                            reduces page load time, resulting in a faster experience for users.</p>
+                        <p><strong>Cost Efficiency:</strong> Instead of building separate sites for desktop and mobile
                             users, responsive web design ensures a single version of your website works across all
-                            devices, saving both time and resources.</li>
-                        <li><strong>Future-Proofing:</strong> A responsive design ensures that your website remains
+                            devices, saving both time and resources.</p>
+                        <p><strong>Future-Proofing:</strong> A responsive design ensures that your website remains
                             adaptable as new devices and screen sizes are released, avoiding the need for frequent
-                            redesigns.</li>
+                            redesigns.</p>
                     </ul>
 
                     <h2>Why Choose My Responsive Front-End Development Services?</h2>
                     <ul>
-                        <li><strong>Tailored Designs:</strong> I create custom, responsive designs based on your unique
-                            business requirements and target audience.</li>
-                        <li><strong>Expert Development:</strong> With expertise in HTML, CSS, JavaScript, and modern
-                            front-end frameworks, I ensure that your site is built using the latest best practices.</li>
-                        <li><strong>Focus on Performance:</strong> I optimize your website for fast loading times and
-                            smooth transitions across all devices, improving performance and user retention.</li>
-                        <li><strong>Seamless User Experience:</strong> My goal is to provide users with an intuitive and
-                            consistent experience, regardless of the device they use.</li>
-                        <li><strong>Ongoing Support:</strong> After launch, I provide support and maintenance services
+                        <p><strong>Tailored Designs:</strong> I create custom, responsive designs based on your unique
+                            business requirements and target audience.</p>
+                        <p><strong>Expert Development:</strong> With expertise in HTML, CSS, JavaScript, and modern
+                            front-end frameworks, I ensure that your site is built using the latest best practices.</p>
+                        <p><strong>Focus on Performance:</strong> I optimize your website for fast loading times and
+                            smooth transitions across all devices, improving performance and user retention.</p>
+                        <p><strong>Seamless User Experience:</strong> My goal is to provide users with an intuitive and
+                            consistent experience, regardless of the device they use.</p>
+                        <p><strong>Ongoing Support:</strong> After launch, I provide support and maintenance services
                             to ensure that your site remains up to date and fully responsive as new devices and
-                            technologies emerge.</li>
+                            technologies emerge.</p>
                     </ul>
 
                 </section>
             </div>
         </section>
         <!-- Categories Area End -->
+        <!-- Want To Work Start -->
         <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
@@ -196,35 +197,42 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-3">
-                        <a href="#" class="btn btn-black f-right">Contact Me Now</a>
+                        <a href="contact.html" class="btn btn-black f-right">Contact Me Now</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Want To Work End -->
+        <!-- Want To Work End -->
         <!-- Contact Info Start -->
-        <div class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
+        <!-- Contact Info Start -->
+        <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-5 col-lg-7">
                         <div class="contact-caption mb-50">
-                            <h3>If Not Now, When? Let’s Work Together!</h3>
-                            <p>Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna
-                                aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra.</p>
-                            <img src="assets/img/gallery/sin.png" alt="">
+                            <h3>The Best Time is Now. Let's Create Something Incredible Together!
+                            </h3>
+                            <p>Let’s move forward together – your vision and our expertise can create something
+                                extraordinary. Whether it’s a new project, a fresh idea, or a unique challenge, we’re
+                                here to support you every step of the way. Don’t wait for the perfect moment, the time
+                                is now. Let's make it happen!</p>
+
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </div>
+
+        </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
