--- a/services.html
+++ b/services.html
@@ -108,94 +108,114 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon"><img src="assets/img/service icon/web-development.png"
-                                        style="height: 50px;" alt=""></span>
+                        <a href="custom-web-development.html">
+                            <div class="single-cat text-center mb-50">
+                                <div class="cat-icon">
+                                    <span class="flaticon"><img src="assets/img/service icon/web-development.png"
+                                            style="height: 50px;" alt=""></span>
+                                </div>
+                                <div class="cat-cap">
+                                    <h5>Custom Web Development</h5>
+                                    <p>Full-stack web applications using PHP Laravel, React.js, and MySQL to meet your
+                                        unique business requirements.</p>
+                                </div>
                             </div>
-                            <div class="cat-cap">
-                                <h5><a href="custom-web-development.html">Custom Web Development</a></h5>
-                                <p>Full-stack web applications using PHP Laravel, React.js, and MySQL to meet your
-                                    unique business requirements.</p>
-                            </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon"><img src="assets/img/service icon/real-time.png"
-                                        style="margin-bottom: 10px;" alt=""></span>
+                        <a href="real-time-application.html">
+                            <div class="single-cat text-center mb-50">
+                                <div class="cat-icon">
+                                    <span class="flaticon"><img src="assets/img/service icon/real-time.png"
+                                            style="margin-bottom: 10px;" alt=""></span>
+                                </div>
+                                <div class="cat-cap">
+                                    <h5>Real-Time Applications</h5>
+                                    <p>Seamless integration of real-time features with Livewire, ensuring dynamic,
+                                        interactive user interfaces.</p>
+                                </div>
                             </div>
-                            <div class="cat-cap">
-                                <h5><a href="real-time-application.html">Real-Time Applications</a></h5>
-                                <p>Seamless integration of real-time features with Livewire, ensuring dynamic,
-                                    interactive user interfaces.</p>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <a href="api-development-Integration.html">
+                            <div class="single-cat text-center mb-50">
+                                <div class="cat-icon">
+                                    <span class="flaticon"><img src="assets/img/service icon/api.png"
+                                            style="height: 50px;" alt=""></span>
+                                </div>
+                                <div class="cat-cap">
+                                    <h5>API Development & Integration</h5>
+                                    <p>Robust and scalable APIs that connect your applications with third-party
+                                        services.
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
+
                     </div>
 
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon"><img src="assets/img/service icon/api.png" style="height: 50px;"
-                                        alt=""></span>
-                            </div>
-                            <div class="cat-cap">
-                                <h5><a href="api-development-Integration.html">API Development & Integration</a></h5>
-                                <p>Robust and scalable APIs that connect your applications with third-party services.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                        <a href="database-design-optimization.html">
+                            <div class="single-cat text-center mb-50">
+                                <div class="cat-icon">
+                                    <span class="flaticon"><img src="assets/img/service icon/database-administrator.png"
+                                            style="margin-left: 10px;margin-bottom: 10px;" alt=""></span>
+                                </div>
+                                <div class="cat-cap">
+                                    <h5>Database Design & Optimization
 
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon"><img src="assets/img/service icon/database-administrator.png"
-                                        style="margin-left: 10px;margin-bottom: 10px;" alt=""></span>
+                                    </h5>
+                                    <p>Structuring efficient MySQL databases for fast, reliable, and secure data
+                                        management.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="cat-cap">
-                                <h5><a href="database-design-optimization.html">Database Design & Optimization</a></h5>
-                                <p>Structuring efficient MySQL databases for fast, reliable, and secure data management.
-                                </p>
-                            </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon"><img src="assets/img/service icon/responsive.png"
-                                        style="margin-bottom: 10px;" alt=""></span>
+                        <a href="responsive-front-enddevelopment.html">
+                            <div class="single-cat text-center mb-50">
+                                <div class="cat-icon">
+                                    <span class="flaticon"><img src="assets/img/service icon/responsive.png"
+                                            style="margin-bottom: 10px;" alt=""></span>
+                                </div>
+                                <div class="cat-cap">
+                                    <h5>Responsive Front-End
+                                        Development
+                                    </h5>
+                                    <p>Developing modern, mobile-first front-end solutions using React.js for a fluid
+                                        user
+                                        experience across all devices.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="cat-cap">
-                                <h5><a href="responsive-front-enddevelopment.html">Responsive Front-End Development</a>
-                                </h5>
-                                <p>Developing modern, mobile-first front-end solutions using React.js for a fluid user
-                                    experience across all devices.
-                                </p>
-                            </div>
-                        </div>
+                        </a>
                     </div>
 
 
                     <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-cat text-center mb-50">
-                            <div class="cat-icon">
-                                <span class="flaticon"><img src="assets/img/service icon/maintenance.png"
-                                        style="margin-bottom: 10px;" alt=""></span>
+                        <a href="maintenance-support.html">
+                            <div class="single-cat text-center mb-50">
+                                <div class="cat-icon">
+                                    <span class="flaticon"><img src="assets/img/service icon/maintenance.png"
+                                            style="margin-bottom: 10px;" alt=""></span>
+                                </div>
+                                <div class="cat-cap">
+                                    <h5>Maintenance & Support</h5>
+                                    <p>Ongoing maintenance, performance optimization, and technical support to ensure
+                                        your
+                                        application runs smoothly over time.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="cat-cap">
-                                <h5><a href="maintenance-support.html">Maintenance & Support</a></h5>
-                                <p>Ongoing maintenance, performance optimization, and technical support to ensure your
-                                    application runs smoothly over time.
-                                </p>
-                            </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Categories Area End -->
+        <!-- Want To Work Start -->
         <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
@@ -206,11 +226,12 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-3">
-                        <a href="#" class="btn btn-black f-right">Contact Me Now</a>
+                        <a href="contact.html" class="btn btn-black f-right">Contact Me Now</a>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Want To Work End -->
         <!-- Want To Work End -->
         <!-- Brand Area Start -->
         <!-- Brand Area Start -->
@@ -320,6 +341,7 @@
         <!-- Brand Area End -->
         <!-- Brand Area End -->
         <!-- Contact Info Start -->
+        <!-- Contact Info Start -->
         <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
@@ -335,16 +357,18 @@
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
+
         </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
