--- a/about.html
+++ b/about.html
@@ -166,6 +166,7 @@
         </section>
         <!-- About Area End -->
         <!-- Want To Work Start -->
+        <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
@@ -180,6 +181,7 @@
                 </div>
             </div>
         </section>
+        <!-- Want To Work End -->
 
 
         <!-- client-comments -->
@@ -388,6 +390,7 @@
         <!-- Brand Area End -->
         <!-- Brand Area End -->
         <!-- Contact Info Start -->
+        <!-- Contact Info Start -->
         <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
@@ -403,16 +406,18 @@
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
+
         </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
