--- a/api-development-Integration.html
+++ b/api-development-Integration.html
@@ -121,11 +121,11 @@
                         your web application with third-party APIs to share data and enhance functionality.</p>
                     <p>These APIs could be for various services such as:</p>
                     <ul>
-                        <li>Payment gateways (e.g., PayPal, Stripe)</li>
-                        <li>Social media platforms (e.g., Facebook, Twitter, Instagram)</li>
-                        <li>CRM systems (e.g., Salesforce)</li>
-                        <li>Data APIs (e.g., weather, financial market data)</li>
-                        <li>Communication APIs (e.g., Twilio for messaging or video calls)</li>
+                        <p>Payment gateways (e.g., PayPal, Stripe)</p>
+                        <p>Social media platforms (e.g., Facebook, Twitter, Instagram)</p>
+                        <p>CRM systems (e.g., Salesforce)</p>
+                        <p>Data APIs (e.g., weather, financial market data)</p>
+                        <p>Communication APIs (e.g., Twilio for messaging or video calls)</p>
                     </ul>
 
                     <h2>What Does API Development & Integration Include?</h2>
@@ -133,64 +133,65 @@
                     <p>Building a custom API for your application enables you to control how data is shared and
                         interacted with across various systems. Here’s what I offer:</p>
                     <ul>
-                        <li><strong>RESTful API Development:</strong> I develop modern RESTful APIs that adhere to
-                            industry standards, ensuring ease of use and scalability.</li>
-                        <li><strong>Authentication & Security:</strong> Secure your APIs using industry-standard
-                            practices such as OAuth, JWT, or API keys to protect sensitive data.</li>
-                        <li><strong>Data Structuring & Serialization:</strong> I create efficient data structures and
-                            serialization methods that ensure smooth data exchange.</li>
-                        <li><strong>API Versioning:</strong> Implementing version control for APIs to ensure backward
-                            compatibility and easy future updates.</li>
+                        <p><strong>RESTful API Development:</strong> I develop modern RESTful APIs that adhere to
+                            industry standards, ensuring ease of use and scalability.</p>
+                        <p><strong>Authentication & Security:</strong> Secure your APIs using industry-standard
+                            practices such as OAuth, JWT, or API keys to protect sensitive data.</p>
+                        <p><strong>Data Structuring & Serialization:</strong> I create efficient data structures and
+                            serialization methods that ensure smooth data exchange.</p>
+                        <p><strong>API Versioning:</strong> Implementing version control for APIs to ensure backward
+                            compatibility and easy future updates.</p>
                     </ul>
 
                     <h3>API Integration</h3>
                     <p>Whether you need to integrate third-party services or connect various internal systems, I help
                         streamline the process. Services I integrate include:</p>
                     <ul>
-                        <li><strong>Payment Gateways:</strong> Securely connect to popular payment services like PayPal,
-                            Stripe, or others for online transactions.</li>
-                        <li><strong>Social Media Integration:</strong> Allow users to log in, share content, or post
-                            updates from your platform to Facebook, Twitter, and other social networks.</li>
-                        <li><strong>CRM and ERP Systems:</strong> Integrate with your existing Customer Relationship
+                        <p><strong>Payment Gateways:</strong> Securely connect to popular payment services like PayPal,
+                            Stripe, or others for online transactions.</p>
+                        <p><strong>Social Media Integration:</strong> Allow users to log in, share content, or post
+                            updates from your platform to Facebook, Twitter, and other social networks.</p>
+                        <p><strong>CRM and ERP Systems:</strong> Integrate with your existing Customer Relationship
                             Management (CRM) or Enterprise Resource Planning (ERP) systems to sync customer data and
-                            enhance business processes.</li>
-                        <li><strong>Weather and Data APIs:</strong> Pull data from external sources such as weather
-                            updates, stock prices, or news feeds to enhance the functionality of your platform.</li>
+                            enhance business processes.</p>
+                        <p><strong>Weather and Data APIs:</strong> Pull data from external sources such as weather
+                            updates, stock prices, or news feeds to enhance the functionality of your platform.</p>
                     </ul>
 
                     <h2>Benefits of API Development & Integration</h2>
                     <ul>
-                        <li><strong>Enhanced Functionality:</strong> By integrating APIs, your application gains access
+                        <p><strong>Enhanced Functionality:</strong> By integrating APIs, your application gains access
                             to a wide range of services, increasing its functionality without reinventing the wheel.
-                        </li>
-                        <li><strong>Automation:</strong> APIs can automate data exchange between systems, reducing
-                            manual effort and improving accuracy.</li>
-                        <li><strong>Improved User Experience:</strong> APIs enable seamless interactions with
+                        </p>
+                        <p><strong>Automation:</strong> APIs can automate data exchange between systems, reducing
+                            manual effort and improving accuracy.</p>
+                        <p><strong>Improved User Experience:</strong> APIs enable seamless interactions with
                             third-party services, allowing your users to benefit from integrated features such as
-                            payments, login, and more.</li>
-                        <li><strong>Future-Proofing:</strong> Custom APIs and third-party integrations can be updated or
+                            payments, login, and more.</p>
+                        <p><strong>Future-Proofing:</strong> Custom APIs and third-party integrations can be updated or
                             expanded as your business needs change, ensuring long-term scalability and adaptability.
-                        </li>
+                        </p>
                     </ul>
 
                     <h2>Why Choose My API Development & Integration Services?</h2>
                     <ul>
-                        <li><strong>Custom Solutions:</strong> I offer tailored API development that aligns perfectly
-                            with your application’s requirements and objectives.</li>
-                        <li><strong>Expert Integration:</strong> I handle complex API integrations, ensuring smooth and
-                            efficient data communication with external services.</li>
-                        <li><strong>Security First:</strong> I prioritize the security of your APIs, using best
-                            practices to ensure data protection and secure connections.</li>
-                        <li><strong>Efficient Performance:</strong> I optimize APIs for speed and reliability, ensuring
-                            that integrations do not affect your app's performance.</li>
-                        <li><strong>Scalable Design:</strong> I build APIs and integrations that are scalable and
-                            future-proof, enabling you to grow your application with ease.</li>
+                        <p><strong>Custom Solutions:</strong> I offer tailored API development that aligns perfectly
+                            with your application’s requirements and objectives.</p>
+                        <p><strong>Expert Integration:</strong> I handle complex API integrations, ensuring smooth and
+                            efficient data communication with external services.</p>
+                        <p><strong>Security First:</strong> I prioritize the security of your APIs, using best
+                            practices to ensure data protection and secure connections.</p>
+                        <p><strong>Efficient Performance:</strong> I optimize APIs for speed and reliability, ensuring
+                            that integrations do not affect your app's performance.</p>
+                        <p><strong>Scalable Design:</strong> I build APIs and integrations that are scalable and
+                            future-proof, enabling you to grow your application with ease.</p>
                     </ul>
 
                 </section>
             </div>
         </section>
         <!-- Categories Area End -->
+        <!-- Want To Work Start -->
         <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
@@ -201,35 +202,42 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-3">
-                        <a href="#" class="btn btn-black f-right">Contact Me Now</a>
+                        <a href="contact.html" class="btn btn-black f-right">Contact Me Now</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Want To Work End -->
+        <!-- Want To Work End -->
         <!-- Contact Info Start -->
-        <div class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
+        <!-- Contact Info Start -->
+        <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-5 col-lg-7">
                         <div class="contact-caption mb-50">
-                            <h3>If Not Now, When? Let’s Work Together!</h3>
-                            <p>Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna
-                                aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra.</p>
-                            <img src="assets/img/gallery/sin.png" alt="">
+                            <h3>The Best Time is Now. Let's Create Something Incredible Together!
+                            </h3>
+                            <p>Let’s move forward together – your vision and our expertise can create something
+                                extraordinary. Whether it’s a new project, a fresh idea, or a unique challenge, we’re
+                                here to support you every step of the way. Don’t wait for the perfect moment, the time
+                                is now. Let's make it happen!</p>
+
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </div>
+
+        </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
