--- a/contact.html
+++ b/contact.html
@@ -125,8 +125,7 @@
                         <h2 class="contact-title">Get in Touch</h2>
                     </div>
                     <div class="col-lg-8">
-                        <form class="form-contact contact_form" action="contact_process.php" method="post"
-                            id="contactForm" novalidate="novalidate">
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="form-contact contact_form">
                             <div class="row">
                                 <div class="col-12">
                                     <div class="form-group">
