--- a/custom-web-development.html
+++ b/custom-web-development.html
@@ -126,12 +126,14 @@
                     <p>I specialize in full-stack development, handling both frontend and backend of your web
                         application:</p>
                     <ul>
-                        <li><strong>Backend:</strong> Leveraging <strong>PHP Laravel</strong> for powerful, secure, and
-                            scalable server-side applications.</li>
-                        <li><strong>Frontend:</strong> Using <strong>React.js</strong> to build modern, responsive, and
-                            dynamic interfaces that ensure a smooth user experience on all devices.</li>
-                        <li><strong>Database:</strong> <strong>MySQL</strong> is used to design optimized and reliable
-                            database structures for fast, secure data storage and retrieval.</li>
+                        <p><strong>Backend:</strong> Leveraging <strong>PHP Laravel</strong> for powerful, secure, and
+                            scalable server-side applications.</p>
+                        <p><strong>Frontend:</strong> Using <strong>React.js</strong> to build modern, responsive,
+                            and
+                            dynamic interfaces that ensure a smooth user experience on all devices.</p>
+                        <p><strong>Database:</strong> <strong>MySQL</strong> is used to design optimized and
+                            reliable
+                            database structures for fast, secure data storage and retrieval.</p>
                     </ul>
 
                     <h3>Scalability and Performance Optimization</h3>
@@ -157,20 +159,21 @@
 
                     <h2>Why Choose My Custom Web Development Service?</h2>
                     <ul>
-                        <li><strong>Tailored Solutions:</strong> Every project is built from the ground up to meet your
-                            specific business needs.</li>
-                        <li><strong>Full Transparency:</strong> I work closely with you throughout the development
-                            process, ensuring your vision is brought to life.</li>
-                        <li><strong>Long-Term Viability:</strong> The applications I build are designed to be
-                            maintainable and scalable, ensuring that they evolve as your business grows.</li>
-                        <li><strong>User-Centric Design:</strong> Focused on delivering an intuitive and smooth user
-                            experience to drive engagement and conversions.</li>
+                        <p><strong>Tailored Solutions:</strong> Every project is built from the ground up to meet your
+                            specific business needs.</p>
+                        <p><strong>Full Transparency:</strong> I work closely with you throughout the development
+                            process, ensuring your vision is brought to life.</p>
+                        <p><strong>Long-Term Viability:</strong> The applications I build are designed to be
+                            maintainable and scalable, ensuring that they evolve as your business grows.</p>
+                        <p><strong>User-Centric Design:</strong> Focused on delivering an intuitive and smooth user
+                            experience to drive engagement and conversions.</p>
                     </ul>
 
                 </section>
             </div>
         </section>
         <!-- Categories Area End -->
+        <!-- Want To Work Start -->
         <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
@@ -181,35 +184,42 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-3">
-                        <a href="#" class="btn btn-black f-right">Contact Me Now</a>
+                        <a href="contact.html" class="btn btn-black f-right">Contact Me Now</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Want To Work End -->
+        <!-- Want To Work End -->
         <!-- Contact Info Start -->
-        <div class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
+        <!-- Contact Info Start -->
+        <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-5 col-lg-7">
                         <div class="contact-caption mb-50">
-                            <h3>If Not Now, When? Let’s Work Together!</h3>
-                            <p>Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna
-                                aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra.</p>
-                            <img src="assets/img/gallery/sin.png" alt="">
+                            <h3>The Best Time is Now. Let's Create Something Incredible Together!
+                            </h3>
+                            <p>Let’s move forward together – your vision and our expertise can create something
+                                extraordinary. Whether it’s a new project, a fresh idea, or a unique challenge, we’re
+                                here to support you every step of the way. Don’t wait for the perfect moment, the time
+                                is now. Let's make it happen!</p>
+
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </div>
+
+        </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
