--- a/maintenance-support.html
+++ b/maintenance-support.html
@@ -155,37 +155,38 @@
 
                     <h2>Benefits of Maintenance & Support</h2>
                     <ul>
-                        <li><strong>Seamless Operation:</strong> Regular maintenance ensures that your website or
-                            application runs without interruptions, providing a consistent user experience.</li>
-                        <li><strong>Security Assurance:</strong> Timely security updates help protect your site from
-                            vulnerabilities, reducing the risk of data breaches and hacking attempts.</li>
-                        <li><strong>Improved Performance:</strong> Continuous optimization of your system ensures fast
-                            load times and excellent user experience, boosting user retention and engagement.</li>
-                        <li><strong>Adaptability:</strong> As your business evolves, ongoing support allows for the
-                            integration of new features, technologies, and business strategies.</li>
-                        <li><strong>Reduced Downtime:</strong> Proactive monitoring and immediate issue resolution help
-                            minimize downtime, ensuring your users can access your services without interruption.</li>
+                        <p><strong>Seamless Operation:</strong> Regular maintenance ensures that your website or
+                            application runs without interruptions, providing a consistent user experience.</p>
+                        <p><strong>Security Assurance:</strong> Timely security updates help protect your site from
+                            vulnerabilities, reducing the risk of data breaches and hacking attempts.</p>
+                        <p><strong>Improved Performance:</strong> Continuous optimization of your system ensures fast
+                            load times and excellent user experience, boosting user retention and engagement.</p>
+                        <p><strong>Adaptability:</strong> As your business evolves, ongoing support allows for the
+                            integration of new features, technologies, and business strategies.</p>
+                        <p><strong>Reduced Downtime:</strong> Proactive monitoring and immediate issue resolution help
+                            minimize downtime, ensuring your users can access your services without interruption.</p>
                     </ul>
 
                     <h2>Why Choose My Maintenance & Support Services?</h2>
                     <ul>
-                        <li><strong>Comprehensive Services:</strong> I offer end-to-end maintenance services, from bug
-                            fixes to performance optimization and feature upgrades.</li>
-                        <li><strong>Responsive Support:</strong> My support team is available to address issues
-                            promptly, ensuring minimal disruption to your operations.</li>
-                        <li><strong>Proactive Monitoring:</strong> I take a proactive approach to maintenance, ensuring
-                            your website or application is always up-to-date and secure, even before issues arise.</li>
-                        <li><strong>Long-Term Partnership:</strong> I aim to build long-term relationships with my
-                            clients, providing ongoing support as your business grows and evolves.</li>
-                        <li><strong>Tailored Plans:</strong> My maintenance and support services are customizable to
+                        <p><strong>Comprehensive Services:</strong> I offer end-to-end maintenance services, from bug
+                            fixes to performance optimization and feature upgrades.</p>
+                        <p><strong>Responsive Support:</strong> My support team is available to address issues
+                            promptly, ensuring minimal disruption to your operations.</p>
+                        <p><strong>Proactive Monitoring:</strong> I take a proactive approach to maintenance, ensuring
+                            your website or application is always up-to-date and secure, even before issues arise.</p>
+                        <p><strong>Long-Term Partnership:</strong> I aim to build long-term relationships with my
+                            clients, providing ongoing support as your business grows and evolves.</p>
+                        <p><strong>Tailored Plans:</strong> My maintenance and support services are customizable to
                             meet the unique needs of your business, ensuring that you're only paying for what you need.
-                        </li>
+                        </p>
                     </ul>
 
                 </section>
             </div>
         </section>
         <!-- Categories Area End -->
+        <!-- Want To Work Start -->
         <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
@@ -196,35 +197,42 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-3">
-                        <a href="#" class="btn btn-black f-right">Contact Me Now</a>
+                        <a href="contact.html" class="btn btn-black f-right">Contact Me Now</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Want To Work End -->
+        <!-- Want To Work End -->
         <!-- Contact Info Start -->
-        <div class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
+        <!-- Contact Info Start -->
+        <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-5 col-lg-7">
                         <div class="contact-caption mb-50">
-                            <h3>If Not Now, When? Let’s Work Together!</h3>
-                            <p>Consectetur adipiscing elit, sed do eiusmod tempor ididunt ut labore et dolore magna
-                                aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra.</p>
-                            <img src="assets/img/gallery/sin.png" alt="">
+                            <h3>The Best Time is Now. Let's Create Something Incredible Together!
+                            </h3>
+                            <p>Let’s move forward together – your vision and our expertise can create something
+                                extraordinary. Whether it’s a new project, a fresh idea, or a unique challenge, we’re
+                                here to support you every step of the way. Don’t wait for the perfect moment, the time
+                                is now. Let's make it happen!</p>
+
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
-        </div>
+
+        </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
