--- a/skills.html
+++ b/skills.html
@@ -195,7 +195,7 @@
                                     <div class="blog-inner">
                                         <div class="blog-top">
                                             <div class="person-img">
-                                                <img src="assets/img/mysql-ar21.svg" alt="">
+                                                <img src="assets/img/mysql.png" alt="">
                                             </div>
                                             <div class="comment-person">
                                                 <h2>MySQL</h2>
@@ -545,6 +545,7 @@
         <!-- skills -->
 
         <!-- Want To Work Start -->
+        <!-- Want To Work Start -->
         <section class="wantToWork-area w-padding2">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
@@ -554,11 +555,12 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-2 col-md-3">
-                        <a href="#" class="btn btn-black f-right">Contact Me Now</a>
+                        <a href="contact.html" class="btn btn-black f-right">Contact Me Now</a>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Want To Work End -->
         <!-- Want To Work End -->
         <!-- Brand Area Start -->
         <!-- Brand Area Start -->
@@ -668,6 +670,7 @@
         <!-- Brand Area End -->
         <!-- Brand Area End -->
         <!-- Contact Info Start -->
+        <!-- Contact Info Start -->
         <section class="contact-info-area w-padding2" data-background="assets/img/gallery/section_bg04.jpg">
             <div class="container">
                 <div class="row justify-content-between">
@@ -679,19 +682,22 @@
                                 extraordinary. Whether it’s a new project, a fresh idea, or a unique challenge, we’re
                                 here to support you every step of the way. Don’t wait for the perfect moment, the time
                                 is now. Let's make it happen!</p>
+
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-5">
-                        <form action="#" class="contact-wrapper">
-                            <input type="text" name="name" placeholder="Full Name">
-                            <input type="email" name="email" placeholder="Email Address">
-                            <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <form action="https://formspree.io/f/mnnnwkkn" method="post" class="contact-wrapper">
+                            <input type="text" name="name" placeholder="Full Name" required>
+                            <input type="email" name="email" placeholder="Email Address" required>
+                            <textarea name="message" id="message" placeholder="Your Message" required></textarea>
                             <button class="submit-btn2" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
             </div>
+
         </section>
+        <!-- Contact Info End -->
         <!-- Contact Info End -->
 
     </main>
